Work on events landing page

--- a/events/templates/events/create.html
+++ b/events/templates/events/create.html
@@ -14,7 +14,7 @@ step by step instructions for executing a great event and lots of fun
 activities and materials to give to guests.
 {% endblock %}
 {% block content %}
-    <form id="event_form" action="" method="post">
+    <form id="event_form" action="" method="post"  class="form_6c">
         <h1>Create an Event</h1>
         {% include "base/_form.html" %}
         {% csrf_token %}
