--- a/templates/base/nav_9c.html
+++ b/templates/base/nav_9c.html
@@ -3,7 +3,7 @@
 <div id="content_9c">
     <div id="title_bar_9c">
         <div class="{% block title_bar_image %}{% endblock %}"></div>
-        <div id="title_bar_9c">
+        <div id="title_bar_9c_info">
             <h1>{% block title_bar_title %}{% endblock %}</h1>
             <p>{% block title_bar_copy %}{% endblock %}</p>
         </div>
