--- a/templates/rah/feedback.html
+++ b/templates/rah/feedback.html
@@ -10,7 +10,7 @@
     know what you think about this page or the site in general. Thanks!
 {% endblock %}
 {% block content %}
-<form action="" method="post">
+<form action="" method="post" class="form_6c">
     <h1>Give us Feedback</h1>
     {% include "base/_form.html" %}
     {% csrf_token %}
