--- a/templates/rah/ga_opt_out.html
+++ b/templates/rah/ga_opt_out.html
@@ -10,7 +10,7 @@
     will resume.
 {% endblock %}
 {% block content %}
-    <form>
+    <form class="form_6c">
         <h1>Opt out of Google Analytics</h1>
         <button id="opt_out_button" class="button_mega">Opt Out</button>
     </form>
