--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -10,7 +10,7 @@ Change your password
 {% endblock %}
 {% block content %}
             
-    <form id="password_change_form" action="" method="post" autocomplete="false">
+    <form id="password_change_form" action="" method="post" autocomplete="false" class="form_6c">
         <h1>Change your password</h1>
         {% include "base/_form.html" %}
         {% csrf_token %}
