--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     {% if form %}
-        <form id="password_reset_confirm" action="" method="post" autocomplete="false">
+        <form id="password_reset_confirm" action="" method="post" autocomplete="false" class="form_6c">
         <h1>Reset Password</h1>
             {% include "base/_form.html" %}
             {% csrf_token %}
