--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -21,7 +21,7 @@
 </div>
 {% endblock %}
 {% block content %}
-<form action="" method="post" autocomplete="false">
+<form action="" method="post" autocomplete="false" class="form_6c">
     <h1>Reset your password</h1>
     {% include "base/_form.html" %}
     {% csrf_token %}
