--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -25,7 +25,7 @@
 <!--</ul>-->
 {% endblock %}
 {% block content %}
-<form action="{% url register %}" method="post" autocomplete="off">
+<form action="{% url register %}" method="post" class="form_6c">
     <h1>Sign Up Now</h1>
     {% include "base/_form.html" %}
     {% with profile_form as form %}
