--- a/challenges/templates/challenges/edit.html
+++ b/challenges/templates/challenges/edit.html
@@ -7,7 +7,7 @@
     {{ type_label }} a Challenge
 {% endblock %}
 {% block content %}
-    <form id="challenge_form" action="" method="post">
+    <form id="challenge_form" action="" method="post" class="form_6c">
         <h1>{{ type_label }} a Challenge</h1>
         {% include "base/_form.html" %}
         {% csrf_token %}
