--- a/groups/templates/groups/group_create.html
+++ b/groups/templates/groups/group_create.html
@@ -11,7 +11,7 @@ Create Community
     info!
 {% endblock %}
 {% block content %}
-    <form id="group_form" action="" method="post" enctype="multipart/form-data">
+    <form id="group_form" action="" method="post" enctype="multipart/form-data" class="form_6c">
         <h1>Create a Community</h1>
         {% include "base/_form.html" %}
         <div class="form_buttons">
