--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -1,7 +1,7 @@
 #form_6c {
     /*padding: 9px;*/
 }
-form h1 {
+.form_6c h1 {
     font-family:"MuseoSlab700", Tahoma, sans-serif;
     color: #103665;
     font-size: 38px;
@@ -10,7 +10,7 @@ form h1 {
     margin-bottom: 18px;
 }
 
-form {
+.form_6c  {
     background: #F2F2F2;
     padding: 9px 18px 18px 18px;
     -webkit-border-radius: 9px;
@@ -19,31 +19,30 @@ form {
     height: 100%;
     overflow: auto;
 }
-form .form_row {
+.form_6c .form_row {
     margin-bottom: 12px;
     float: left;
 }
-form .form_row_half {
+.form_6c .form_row_half {
     margin-right: 9px;
 }
-form.form_row_half_last {
+.form_6c .form_row_half_last {
     margin-right: 0px;
 }
 
-form label {
+.form_6c label {
     display: block;
     color: #103665;
-    font-weight: bold;
-}
-form .form_help_text {
+    font-weight: bold; }
+.form_6c .form_help_text {
     font-size: 12px;
     color: #666666;
     line-height: 16px;
 }
 
-form .form_row input[type=text], 
-form .form_row input[type=password],
-form .form_row textarea
+.form_6c .form_row input[type=text], 
+.form_6c .form_row input[type=password],
+.form_6c .form_row textarea
 {
     border: 1px solid #CCC;
     font-size: 12px;
@@ -51,37 +50,37 @@ form .form_row textarea
     width: 402px;
     outline: none;
 }
-form .form_row textarea {
+.form_6c .form_row textarea {
     display: block;
 }
-form .form_row_half input[type=text], 
-form .form_row_half input[type=password] {
+.form_6c .form_row_half input[type=text], 
+.form_6c .form_row_half input[type=password] {
     width: 187px;
 }
 
-form .form_row input:focus, 
-form .form_row textarea:focus {
+.form_6c .form_row input:focus, 
+.form_6c .form_row textarea:focus {
     background: #FFFFF0;
 }
 
-form .form_row input[type=checkbox] {
+.form_6c .form_row input[type=checkbox] {
     float: left;
     height: 21px;
     margin-right: 6px;
 }
 
-form .form_row ul {
+.form_6c .form_row ul {
     margin: 0px;
 }
-form .form_row ul li {
+.form_6c .form_row ul li {
     list-style: none;
 }
-form .form_row ul li label {
+.form_6c .form_row ul li label {
     font-weight: normal;
     color: #333;
 }
 
-form .form_buttons {
+.form_6c .form_buttons {
     text-align: center;
     padding-top: 18px;
     margin-top: 18px;
@@ -89,21 +88,52 @@ form .form_buttons {
     float: left;
     width: 100%;
 }
-form .form_buttons .form_cancel {
+.form_6c .form_buttons .form_cancel {
     margin-right: 18px;
 }
 
 /*Errors*/
-form label.form_error{
+.form_6c label.form_error{
     font-size: 12px;
     font-weight: normal;
 }
-form .form_error input, form .form_error textarea, form .form_error label {
+.form_6c .form_error input, .form_6c .form_error textarea, .form_6c .form_error label {
     color: #FF1D1D;
 }
-form .form_error input, form .form_error textarea{
+.form_6c .form_error input, .form_6c .form_error textarea{
     border-color: #FF1D1D !important;
 }
+
+/*Search Form*/
+.search_widget {
+    position: relative;
+    overflow: auto;
+    height: 100%;
+}
+.search_widget input[type=text] {
+    border: 1px solid #000;
+    border-right: 0;
+    background: #fff;
+    font-size: 16px;
+    width: 100px;
+    /*padding: 6px;*/
+    padding: 5px 14px;
+    line-height: 21px;
+    outline: none;
+    float: left;
+    padding: 0;
+}
+.search_button {
+    float: left;
+    background: #0F0;
+    filter: none;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
+    border: 1px solid #000;
+    padding: 0;
+}
+
 
 /* ---------------------------------------------------------------------------------------------------------------------
 Button Button Button Button Button Button Button Button Button Button Button Button Button Button Button Button Button 
