--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -47,11 +47,13 @@
                         <img src="{% dated_static 'images/theme_new/header_logo.png' %}" alt="Repower at Home logo" width="239" height="35"/>
                     </a>
                     <form action="/search" id="cse_search_box_form">
-                        <input type="hidden" name="cx" value="018322562804099680750:4l5wfmovb4q" />
-                        <input type="hidden" name="cof" value="FORID:11" />
-                        <input type="hidden" name="ie" value="UTF-8" />
-                        <input type="text" name="q" size="31" id="cse_search_box"/>
-                        <button type="submit" id="cse_search_box_submit">Go</button>
+                        <div>
+                            <input type="hidden" name="cx" value="018322562804099680750:4l5wfmovb4q" />
+                            <input type="hidden" name="cof" value="FORID:11" />
+                            <input type="hidden" name="ie" value="UTF-8" />
+                            <input type="text" name="q" size="31" id="cse_search_box"/>
+                            <button type="submit" id="cse_search_box_submit">Go</button>
+                        </div>
                     </form>
                     <div id="header_links">
                         <a href="/about/" id="header_about">About Us</a>
