--- a/templates/rah/profile_edit.html
+++ b/templates/rah/profile_edit.html
@@ -31,7 +31,7 @@
             </form>
         </div>
         <div id="notifications_tab">
-            <form id="notifications_form" action="" method="post" autocomplete="false">
+            <form id="notifications_form" action="" method="post" class="form_6c">
                 {% with group_notification_form.notifications as field %}
                     <div id="community_notifications" class="form_row {% if field.errors %}error{% endif %}">
                         {{ field.label_tag }}
