--- a/search_widget/templates/search_widget/_search_widget.html
+++ b/search_widget/templates/search_widget/_search_widget.html
@@ -1,7 +1,6 @@
-<form class="search_widget" action="{{ path }}" method="get">
+<form class="search_widget" action="{{ request.path }}" method="get">
     <div class="form_row search_fields">
-        <input id="search_widget_input" class="search_value" name="search" type="text" />
-        <!--<input type="submit" class="search_button" value="Go"/>-->
-        <button class="search_button" type="submit">Go</button>
+        <input id="search_widget_input" class="search_value" name="search" type="text" placeholder="Search..." />
+        <button class="search_button" type="submit"><span class="sprite_search_mag"></span></button>
     </div>
 </form>
