--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -114,24 +114,23 @@
     border: 1px solid #000;
     border-right: 0;
     background: #fff;
-    font-size: 16px;
-    width: 100px;
-    /*padding: 6px;*/
-    padding: 5px 14px;
-    line-height: 21px;
+    font-size: 14px;
+    width: 163px;
+    line-height: 16.45px;
     outline: none;
     float: left;
-    padding: 0;
+    padding: 5px 0 5px 5px;
 }
 .search_button {
     float: left;
-    background: #0F0;
+    background: #8FD100;
     filter: none;
     -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
     border-radius: 0px;
     border: 1px solid #000;
-    padding: 0;
+    padding: 3px 0 2px 0;
+    *padding: 5px 0 4px 0; /*ie7 hack*/
 }
 
 
