--- a/events/templates/events/show.html
+++ b/events/templates/events/show.html
@@ -46,25 +46,7 @@ host your own.
 <h2>Recent Events</h2>
 <ul class="plain_list nugget_9c_list">
     {% for event in events %}
-    <li>
-        <a href="{% url event-detail event.id %}">
-            <img src="http://maps.google.com/maps/api/staticmap?center={{event.lat}},{{event.lon}}&amp;zoom=10&amp;size=80x80&amp;markers=size:small%7C{{event.lat}},{{event.lon}}&amp;sensor=false" 
-                alt="Map of the event" width="80" height="80"/>
-        </a>
-        <div class="nugget_9c_list_name">
-            <a href="{% url event-detail event.id %}">{{ event }}</a>
-            <div>
-                <span>When:</span> {{ event.when|date }}<br/>
-                <span>Where:</span> {{ event.location }}
-            </div>
-        </div>
-        <div class="nugget_9c_list_desc">
-            {{ event.details|truncatewords_html:16 }}
-            <div>
-                <a href="{% url event-detail event.id %}">View Event Page</a>
-            </div>
-        </div>
-    </li>
+        {% include 'base/_nugget_9c_list.html' %}
     {% endfor %}
 </ul>
 {% endif %}
