Finished nav sidebard, logged in and logged out

--- a/search_widget/templates/search_widget/_search_widget.html
+++ b/search_widget/templates/search_widget/_search_widget.html
@@ -1,5 +1,5 @@
 <form class="search_widget" action="{{ request.path }}" method="get">
-    <div class="form_row search_fields">
+    <div>
         <input id="search_widget_input" class="search_value" name="search" type="text" placeholder="Search..." />
         <button class="search_button" type="submit"><span class="sprite_search_mag"></span></button>
     </div>
