--- a/static/css/common.css
+++ b/static/css/common.css
@@ -92,6 +92,7 @@ Content Content Content Content Content Content Content Content Content Content 
     -webkit-border-bottom-right-radius: 9px;
     -moz-border-radius-bottomright: 9px;
     border-bottom-right-radius: 9px;
+    min-height: 500px;
 }
 #content_9c{
     padding: 9px; 
@@ -107,7 +108,7 @@ Content Content Content Content Content Content Content Content Content Content 
     padding: 9px 9px;
 }
 #breadcrumbs_shadow {
-    box-shadow: -2px 3px 5px #aaa;
+    box-shadow: 0px 1px 8px #666;
 }
 
 /* ---------------------------------------------------------------------------------------------------------------------
@@ -287,6 +288,7 @@ Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav 
     -webkit-border-bottom-left-radius: 8px;
     -moz-border-radius-bottomleft: 8px;
     border-bottom-left-radius: 8px;
+    padding-bottom: 9px;
 }
 
 /*Profile info for logged in users*/
@@ -311,12 +313,41 @@ Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav 
 #nav #nav_profile_stats {
     font-size: 12px;
     font-weight: bold;
-    margin-bottom: 9px;
+    margin-bottom: -1px;
+    padding-bottom: 9px;
+    border-bottom: 1px solid #ccc;
+    width: 192px;
 }
 #nav #nav_profile_location, #nav #nav_profile_stats, #nav h3 {
-    margin-left: 12px;
+    padding-left: 12px;
 }
 
+/*Logged out call to register*/
+#nav_logged_out {
+    padding: 12px 18px 18px 18px;
+    background: #0F2D45;
+    -webkit-border-bottom-left-radius: 9px;
+    -moz-border-radius-bottomleft: 9px;
+    border-bottom-left-radius: 9px;
+    -webkit-box-shadow: 1px 2px 6px #333;
+    -moz-box-shadow: 1px 2px 6px #333;
+    box-shadow: 1px 2px 6px #333;    
+}
+#nav_logged_out h2 {
+    color: #96ACC0;
+    text-shadow: 0 -1px 0px black;
+}
+#nav_logged_out p {
+    color: #FFFFFF;
+}
+#nav_logged_out_register a {
+    width: 159px;
+}
+#nav_logged_out_fb {
+    border-top: 1px dotted #96ACC0;
+    margin-top: 18px;
+    padding-top: 18px;
+}
 
 /* Primary */
 #nav_primary li {
@@ -331,6 +362,9 @@ Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav 
     border-top: 1px solid #CCC;
     padding:8px 0px 8px 0;
 }
+#nav_primary li:first-child a {
+    border-top: 0px;
+}
 #nav_primary li a:hover {
     text-decoration: none;
 }
@@ -342,6 +376,7 @@ Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav 
 #nav_secondary{
     border-top: 1px solid #CCC;
     width:207px;
+    padding: 6px 0 0 0;
 }
 #nav_secondary li a:hover {
     text-decoration: none;
@@ -355,9 +390,10 @@ Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav 
     padding:3px 9px 3px 9px;
 }
 #nav_logout_link {
+    margin-top: 3px;
     border-top:1px solid #CCC;
     padding-top: 9px !important;
-    padding-bottom: 9px !important;
+    padding-bottom: 0px !important;
 }
 
 /*Selected Nav*/
