--- a/templates/base/nav.html
+++ b/templates/base/nav.html
@@ -20,6 +20,20 @@
             </div>
         {% else %}
         {#Not logged in!#}
+        <div id="nav_logged_out">
+            <h2>Join Us Today</h2>
+            <p>Aliquam lectus orci, adipiscing et, sodales ac, feugiat non, lacus. Ut dictum velit nec est.</p>
+            <div id="nav_logged_out_register" class="center">
+                <a href="{% url register %}" class="button">Create an Account</a>
+            </div>
+            <div id="nav_logged_out_fb" class="center">
+                <div class="fb_button" id="fb-login">
+                    <a href="#" class="fb_button fb_button_medium">
+                        <span id="fb_login_text" class="fb_button_text">Join with with Facebook</span>
+                    </a>
+                </div>
+            </div>
+        </div>
         {% endif %}
         <ul id="nav_primary" class="plain_list">
             <li class="{% ifequal nav_selected "actions" %}nav_selected{% endifequal %}">
@@ -43,7 +57,7 @@
                 <div class="nav_pointer_wrap"></div>
             </li>
         </ul>
-        {% if user.is_authenticated %}        
+        {% if request.user.is_authenticated %}        
             <ul id="nav_secondary" class="plain_list">
                 <li>
                     <a href=""><span class="sprite_nav_calendar"></span>My Calendar</a>
